# logicsim

./: CLAUDE.md  README.md  TODO.md  main.py  pyproject.toml  pytest.ini
logicsim/: __init__.py  graph_data.py  simulation.py
tests/: test_graph_data.py  test_simulation.py
ui/: graph.slint  main.slint  toolbox.slint
